# transloco_copy

./: Cargo.toml  README.md  transloco.config.js
.github/: dependabot.yml
.github/workflows/: audit.yml  general.yml
src/: main.rs
